# waveemapi3

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml.example  docker-compose.yml.example  waveemapi.toml.example
.github/workflows/: docker-publish.yml  rust.yml
src/: audio.rs  auth.rs  config.rs  error.rs  helpers.rs  main.rs
src/api/: catcher.rs  mod.rs  status.rs  upload.rs
src/audio/: mod.rs  mp3.rs  wav.rs
